syntax = "proto3";

package order;

service OrderService {
    rpc placeOrder(OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
    string order_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message OrderResponse {
    string order_id = 1;
    string product_id = 2;
    int32 quantity = 3;
    string status = 4;
}